cmake_minimum_required(VERSION 3.26)
project(Cplusplus)

set(CMAKE_CXX_STANDARD 17)

add_executable(Cplusplus main.cpp
        maxArea.cpp
        maxArea.cpp
        MyLinkedList.cpp
        MyLinkedList.cpp
        Stacks.cpp
        Queue.cpp
        Stringday1.cpp)

add_executable(maxArea maxArea.cpp)